<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <!-- 本周概况 -->
    <group android:id="@+id/summarize_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/day_at_work"
            android:title="@string/day_at_work"
            android:icon="@drawable/ic_date_present_black"
            />
        <item
            android:id="@+id/punish_cash"
            android:title="@string/punish_cash"
            android:icon="@drawable/ic_punish_black"
            />
    </group>

    <!-- 本周详情 -->
    <group android:id="@+id/detail_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/late"
            android:title="@string/late"
            />
        <item
            android:id="@+id/absent"
            android:title="@string/punch_false"
            />
        <item
            android:id="@+id/no_sign_off"
            android:title="@string/punch_out_false"
            />
        <item
            android:id="@+id/out"
            android:title="@string/out_duty"
            />
        <item
            android:id="@+id/sick_leave"
            android:title="@string/sick_leave"
            />
        <item
            android:id="@+id/other_leave"
            android:title="@string/personal_leave"
            />
    </group>

    <!-- 退出 -->
    <group android:id="@+id/exit_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/logout_btn"
            android:title="@string/logout"
            android:icon="@drawable/ic_run"
            />
        <item
            android:id="@+id/exit_btn"
            android:title="@string/exit"
            android:icon="@drawable/exit"
            />
    </group>
</menu>