<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/append"
        android:icon="@drawable/ic_add_white"
        app:showAsAction="always"
        android:title="@string/append"
        >
        <menu>
            <item
                android:id="@+id/new_leave"
                android:title="@string/new_leave"
                />
            <item
                android:id="@+id/new_out"
                android:title="@string/new_out_duty"
                />
            <item
                android:id="@+id/i_started"
                android:title="@string/i_started"
                />
            <item
                android:id="@+id/i_examine"
                android:title="@string/i_verified"
                android:visible="true"
                />
        </menu>
    </item>

</menu>