<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingLeft="@dimen/main_padding"
        android:paddingRight="@dimen/main_padding"
        android:paddingTop="@dimen/main_padding"
        android:paddingBottom="@dimen/main_padding">
        <com.azusasoft.puncher.views.RadiusLayout
            android:layout_width="@dimen/drawer_head_out_size"
            android:layout_height="@dimen/drawer_head_out_size"
            app:layout_radius="@dimen/fab_size"
            android:background="@color/grey"
            >
            <ImageView
                android:id="@+id/hours_progress"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="bottom"
                android:src="#aa000000"
                />
        </com.azusasoft.puncher.views.RadiusLayout>

        <com.azusasoft.puncher.views.RadiusLayout
            android:id="@+id/drawer_header"
            android:layout_width="@dimen/drawer_head_size"
            android:layout_height="@dimen/drawer_head_size"
            android:background="@color/white"
            android:layout_marginTop="@dimen/drawer_head_frame_size"
            android:layout_marginLeft="@dimen/drawer_head_frame_size"
            android:layout_marginBottom="@dimen/main_margin"
            app:layout_radius="@dimen/fab_size"
            android:onClick="onDrawerHeadClick"
            >
            <ImageView
                android:id="@+id/days_progress"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:src="@color/azusa_color_pale"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/total_hour"
                    style="@style/drawer_header_text"
                    android:text="40"
                    />
                <TextView
                    android:id="@+id/hour_h"
                    style="@style/drawer_header_text.mini"
                    android:text="@string/hour_h" />
            </LinearLayout>
        </com.azusasoft.puncher.views.RadiusLayout>
        <TextView
            android:id="@+id/user_name"
            android:layout_below="@+id/drawer_header"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/main_padding"
            android:layout_marginBottom="2dp"
            style="@style/text_at_primary"
            android:textSize="16sp"
            android:text="@string/user_name_default"
            />
        <TextView
            android:id="@+id/user_detail"
            style="@style/text_at_primary"
            android:textSize="@dimen/text_min"
            android:text="@string/user_detail_default"
            android:alpha="0.7"
            android:layout_below="@id/user_name"
            />

        <TextView
            android:id="@+id/drawer_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_min"
            android:textColor="@color/white"
            android:gravity="center_vertical|end"
            android:alpha="0.54"
            android:text="2016年1月 第四周"
            android:paddingLeft="@dimen/main_padding"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>
</LinearLayout>